complete sticky top-bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <header>
     <logo></logo>
-    <top-bar></top-bar>
+    <div data-sticky-container>
+            <top-bar class="title-bar"  data-sticky data-options="marginTop:0;"></top-bar>
+    </div>
+    
 </header>
-<promotion></promotion>
+<promotion ></promotion>
 <buyoptions></buyoptions>
 <footer>
     <contact></contact>
